style: fix code smells p.5